--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/style.css" rel="stylesheet" type="text/css" />
+    <link href="./src/style.css" rel="stylesheet" type="text/css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
     <title>SpoonFeed Restaurant</title>
   </head>
   <body>
@@ -26,30 +35,36 @@
           </ul>
         </div>
       </header>
-      <section class="hero-section">
-        <div class="hero-text">
-          <h1>Eat Healthy, Stay Healthy</h1>
-          <p>
-            SpoonFeed is serving its loyal customers in staying healthy and fit.
-            SpoonFeed sources all its ingredients directly from organic farms.
-            Your trust is our Brand. Start your healthy meals today.
-          </p>
-          <button>Get your meal</button>
+      <!-- <section class="menu">
+        We are going to work from this point now onwards.
+        <h1>Menu Items</h1>
+        <div class="menus">
+          <div class="menu-item item-1"></div>
+          <div class="menu-item item-2"></div>
+          <div class="menu-item item-3"></div>
+          <div class="menu-item item-4"></div>
+        </div> -->
+      <!-- </section> -->
+      <!-- <section class="contact-section">
+        <h1>Contact US</h1>
+        <div class="contact-data">
+          <address>
+            <ion-icon name="navigate-circle-outline"></ion-icon>House No. 1/4,
+            Street 42 ,Lahore, Pakistan, 40500.
+          </address>
+          <a href="tel:+34602072005" target="_blank"
+            ><ion-icon name="logo-whatsapp"></ion-icon> +34602072005</a
+          >
+          <a href="email:zarriy@outlook.com"
+            ><ion-icon name="mail-outline"></ion-icon> Zarriy@outlook.com</a
+          >
         </div>
-        <div class="hero-img">
-          <img
-            src="/src/hero-img.png"
-            alt="Healthy Food for healthy people"
-            width="460px"
-            height="auto"
-          />
-        </div>
-      </section>
+      </section> -->
       <footer>
         <p>Designed by Zarriy</p>
         <p>All Rights Reserved| &copy; 2022</p>
       </footer>
     </div>
-    <script src="main.js"></script>
+    <script src="./src/contact.js"></script>
   </body>
 </html>
